--- a/angular-cinema-project/cinema/src/app/movie-list/movie-list.component.html
+++ b/angular-cinema-project/cinema/src/app/movie-list/movie-list.component.html
@@ -10,7 +10,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="table-row"></tr>
+          <tr *ngFor="let movies of movieList$ | async" class="table-row"></tr>
         </tbody>
     </table>
 </section>
