--- a/angular-cinema-project/cinema/src/app/movie/movie.component.html
+++ b/angular-cinema-project/cinema/src/app/movie/movie.component.html
@@ -3,16 +3,27 @@
     <div class="form-group">
       <label class="text-warning" for="title">Movie Title:</label>
       <input id="title" type="text" class="form-control"
-        required pattern="" name="title" [(ngModel)]="movie.title">
+        required pattern="[A-ŰA-Ű ]{5,25}" name="title" [(ngModel)]="movie.title">
     </div>
     <div class="row">
       <div class="form-group col-6">
+        <label class="text-warning" for="year">elease year:</label>
+        <input id="year" type="text" class="form-control"
+        required pattern="^(199\d|200\d|2021)$/" name="title" [(ngModel)]="movie.year">
 
       </div>
       <div class="form-group col-6">
+        <label class="text-warning" for="category">Category:</label>
+        <select selected name="Choose Category" id="category">
+          <option value="Drama">Drama</option>
+          <option value="Action">Action</option>
+          <option value="Fantasy">Fantasy</option>
+        </select>
 
       </div>
     </div>
+    <button [disabled]="mForm.invalid || saveMovie" type="button" class="btn btn-warning">Save</button>
+    <div [hidden]="mForm.controls.submit?.valid" class="danger">Fill all field to save</div>
 
   </form>
 
